--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "name": "بـوت جـمثون",
   "description": "بـوت جمثون العربي الاول في الشرق الأوسط السورس مجاني لا يخدعك أحد في تنصيب - قناة السورس @JMTHON ",
-  "logo": "https://telegra.ph/file/5f6ef13851dcf0d6fc72b.jpg",
+  "logo": "
+  
   "keywords": [
     "plugin",
     "modular",
